--- a/tests/markup/snapshots/file-mob2-png.snap.html
+++ b/tests/markup/snapshots/file-mob2-png.snap.html
@@ -4,12 +4,12 @@
 		<div class="sd-file__decorator">
 			<span class="sd-file__drag-area-placeholder">Drag and drop a file here or click the button below and choose a file to upload.</span>
 			<div class="sd-file__wrapper">
-				<label aria-label="Choose file" class="sd-context-btn sd-file__choose-btn sd-file__choose-btn--icon" role="button" tabindex="0">
-					<span>Choose file</span>
-					<svg aria-label="Choose file" class="sv-svg-icon" role="img">
+				<label aria-label="Replace file" class="sd-context-btn sd-file__choose-btn sd-file__choose-btn--icon" role="button" tabindex="0">
+					<span>Replace file</span>
+					<svg aria-label="Replace file" class="sv-svg-icon" role="img">
 						<use xlink:href="#icon-choosefile" class="">
 						</use>
-						<title class="">Choose file</title>
+						<title class="">Replace file</title>
 					</svg>
 				</label>
 			</div>
