--- a/tests/markup/snapshots/matrixdropdown-cell-errors-bottom.snap.html
+++ b/tests/markup/snapshots/matrixdropdown-cell-errors-bottom.snap.html
@@ -23,7 +23,7 @@
 				</td>
 			</tr>
 			<tr class="sd-table__row">
-				<td class="sd-table__cell" colspan="1" data-responsive-title="" title="">
+				<td class="sd-table__cell sd-table__cell--empty" colspan="1" data-responsive-title="" title="">
 				</td>
 				<td class="sd-table__cell sd-table__cell--error sd-table__cell--error-bottom" colspan="1" data-responsive-title="" title="">
 					<div aria-live="polite" class="sd-question__erbox sd-question__erbox--below-question sd-question__erbox--outside-question" id="testid0row0cell1_errors" role="alert">
