work for https://github.com/surveyjs/private-tasks/issues/258

--- a/tests/markup/snapshots/matrixdynamic-defaultV2.snap.html
+++ b/tests/markup/snapshots/matrixdynamic-defaultV2.snap.html
@@ -54,7 +54,7 @@
 										</div>
 									</div>
 									<div class="sd-dropdown_chevron-button">
-										<svg class="sd-dropdown_chevron-button-svg sv-svg-icon" role="img" style="height:24px; width:24px;">
+										<svg class="sd-dropdown_chevron-button-svg sv-svg-icon" role="img">
 											<use xlink:href="#icon-chevron" class="">
 											</use>
 										</svg>
@@ -99,7 +99,7 @@
 										</div>
 									</div>
 									<div class="sd-dropdown_chevron-button">
-										<svg class="sd-dropdown_chevron-button-svg sv-svg-icon" role="img" style="height:24px; width:24px;">
+										<svg class="sd-dropdown_chevron-button-svg sv-svg-icon" role="img">
 											<use xlink:href="#icon-chevron" class="">
 											</use>
 										</svg>
@@ -144,7 +144,7 @@
 										</div>
 									</div>
 									<div class="sd-dropdown_chevron-button">
-										<svg class="sd-dropdown_chevron-button-svg sv-svg-icon" role="img" style="height:24px; width:24px;">
+										<svg class="sd-dropdown_chevron-button-svg sv-svg-icon" role="img">
 											<use xlink:href="#icon-chevron" class="">
 											</use>
 										</svg>
@@ -206,7 +206,7 @@
 										</div>
 									</div>
 									<div class="sd-dropdown_chevron-button">
-										<svg class="sd-dropdown_chevron-button-svg sv-svg-icon" role="img" style="height:24px; width:24px;">
+										<svg class="sd-dropdown_chevron-button-svg sv-svg-icon" role="img">
 											<use xlink:href="#icon-chevron" class="">
 											</use>
 										</svg>
@@ -251,7 +251,7 @@
 										</div>
 									</div>
 									<div class="sd-dropdown_chevron-button">
-										<svg class="sd-dropdown_chevron-button-svg sv-svg-icon" role="img" style="height:24px; width:24px;">
+										<svg class="sd-dropdown_chevron-button-svg sv-svg-icon" role="img">
 											<use xlink:href="#icon-chevron" class="">
 											</use>
 										</svg>
@@ -296,7 +296,7 @@
 										</div>
 									</div>
 									<div class="sd-dropdown_chevron-button">
-										<svg class="sd-dropdown_chevron-button-svg sv-svg-icon" role="img" style="height:24px; width:24px;">
+										<svg class="sd-dropdown_chevron-button-svg sv-svg-icon" role="img">
 											<use xlink:href="#icon-chevron" class="">
 											</use>
 										</svg>
