--- a/tests/markup/snapshots/rating-as-dropdown-readonly.snap.html
+++ b/tests/markup/snapshots/rating-as-dropdown-readonly.snap.html
@@ -4,7 +4,7 @@
 			<div>Select...</div>
 		</div>
 		<div class="sd-dropdown_chevron-button">
-			<svg class="sd-dropdown_chevron-button-svg sv-svg-icon" role="img" style="height:24px; width:24px;">
+			<svg class="sd-dropdown_chevron-button-svg sv-svg-icon" role="img">
 				<use xlink:href="#icon-chevron" class="">
 				</use>
 			</svg>
