--- a/tests/markup/snapshots/matrixdynamic-show-in-multiple-columns.snap.html
+++ b/tests/markup/snapshots/matrixdynamic-show-in-multiple-columns.snap.html
@@ -2,15 +2,15 @@
 	<table class="sd-matrixdropdown sd-table sd-table--align-middle">
 		<thead>
 			<tr>
-				<td class="sd-table__cell sd-table__cell--dropdown sd-table__cell--empty sd-table__cell--header">
+				<td class="sd-table__cell sd-table__cell--column-title sd-table__cell--dropdown sd-table__cell--empty sd-table__cell--header">
 				</td>
-				<th class="sd-table__cell sd-table__cell--header">
+				<th class="sd-table__cell sd-table__cell--column-title sd-table__cell--header">
 					<span class="sv-string-viewer">Item 1</span>
 				</th>
-				<th class="sd-table__cell sd-table__cell--header">
+				<th class="sd-table__cell sd-table__cell--column-title sd-table__cell--header">
 					<span class="sv-string-viewer">Item 1</span>
 				</th>
-				<th class="sd-table__cell sd-table__cell--header">
+				<th class="sd-table__cell sd-table__cell--column-title sd-table__cell--header">
 					<span class="sv-string-viewer">Item 2</span>
 				</th>
 			</tr>
