--- a/tests/markup/snapshots/matrixdropdown-cell-errors-top.snap.html
+++ b/tests/markup/snapshots/matrixdropdown-cell-errors-top.snap.html
@@ -2,9 +2,9 @@
 	<table class="sd-matrixdropdown sd-table sd-table--align-middle">
 		<thead>
 			<tr>
-				<td class="sd-table__cell sd-table__cell--dropdown sd-table__cell--empty sd-table__cell--header">
+				<td class="sd-table__cell sd-table__cell--column-title sd-table__cell--dropdown sd-table__cell--empty sd-table__cell--header">
 				</td>
-				<th class="sd-table__cell sd-table__cell--header sd-table__cell--text">
+				<th class="sd-table__cell sd-table__cell--column-title sd-table__cell--header sd-table__cell--text">
 					<span class="sv-string-viewer">col1</span>
 					<span>&nbsp;</span>
 					<span class="sd-question__required-text">*</span>
