--- a/tests/markup/snapshots/matrixdynamic-defaultV2.snap.html
+++ b/tests/markup/snapshots/matrixdynamic-defaultV2.snap.html
@@ -3,16 +3,16 @@
 		<table class="sd-matrixdynamic sd-table">
 			<thead>
 				<tr>
-					<th class="sd-table__cell sd-table__cell--dropdown sd-table__cell--header">
+					<th class="sd-table__cell sd-table__cell--column-title sd-table__cell--dropdown sd-table__cell--header">
 						<span class="sv-string-viewer">Column 1</span>
 					</th>
-					<th class="sd-table__cell sd-table__cell--dropdown sd-table__cell--header">
+					<th class="sd-table__cell sd-table__cell--column-title sd-table__cell--dropdown sd-table__cell--header">
 						<span class="sv-string-viewer">Column 2</span>
 					</th>
-					<th class="sd-table__cell sd-table__cell--dropdown sd-table__cell--header">
+					<th class="sd-table__cell sd-table__cell--column-title sd-table__cell--dropdown sd-table__cell--header">
 						<span class="sv-string-viewer">Column 3</span>
 					</th>
-					<td class="sd-table__cell sd-table__cell--dropdown sd-table__cell--empty sd-table__cell--header">
+					<td class="sd-table__cell sd-table__cell--column-title sd-table__cell--dropdown sd-table__cell--empty sd-table__cell--header">
 					</td>
 				</tr>
 			</thead>
