--- a/tests/markup/snapshots/signaturepad-with-backgroundImage.snap.html
+++ b/tests/markup/snapshots/signaturepad-with-backgroundImage.snap.html
@@ -2,7 +2,7 @@
 	<div class="sjs_sp_placeholder">Sign here</div>
 	<div>
 		<img class="sjs_sp__background-image" height="200" src="https://surveyjs.io/Content/Images/examples/image-picker/lion.jpg" width="300">
-			<canvas class="sjs_sp_canvas" height="200" style="height:200px; touch-action:none; user-select:none; width:300px;" tabindex="0" width="300">
+			<canvas class="sjs_sp_canvas" height="200" style="height:200px; user-select:none; width:300px;" tabindex="0" width="300">
 			</canvas>
 		</div>
 		<div class="sjs_sp_controls">
