--- a/tests/markup/snapshots/signaturepad.snap.html
+++ b/tests/markup/snapshots/signaturepad.snap.html
@@ -1,7 +1,7 @@
 <div class="sjs_sp_container sv_q_signaturepad" style="height:200px; width:300px;">
 	<div class="sjs_sp_placeholder">Sign here</div>
 	<div>
-		<canvas class="sjs_sp_canvas" height="200" style="height:200px; touch-action:none; user-select:none; width:300px;" tabindex="0" width="300">
+		<canvas class="sjs_sp_canvas" height="200" style="height:200px; user-select:none; width:300px;" tabindex="0" width="300">
 		</canvas>
 	</div>
 	<div class="sjs_sp_controls">
