--- a/tests/markup/snapshots/file-mob2-zip-png-ro.snap.html
+++ b/tests/markup/snapshots/file-mob2-zip-png-ro.snap.html
@@ -2,7 +2,7 @@
 	<input class="form-control sd-visuallyhidden" disabled="" id="testid0i" multiple="" placeholder="Question title" style="color:transparent;" type="file">
 	<div class="sd-file__drag-area">
 		<div class="sd-file__decorator">
-			<span class="sd-file__drag-area-placeholder">Drag and drop a file here or click the button below and choose a file to upload.</span>
+			<span class="sd-file__drag-area-placeholder">No file chosen</span>
 			<div class="sd-file__wrapper">
 			</div>
 		</div>
