--- a/tests/markup/snapshots/file-modern-zip-png-ro.snap.html
+++ b/tests/markup/snapshots/file-modern-zip-png-ro.snap.html
@@ -2,7 +2,7 @@
 	<input class="form-control sv-visuallyhidden" disabled="" id="testid0i" multiple="" placeholder="Question title" style="color:transparent;" type="file">
 	<div>
 		<div class="sv-file__decorator">
-			<span class="sv-hidden">Drag and drop a file here or click the button below and choose a file to upload.</span>
+			<span class="sv-hidden">No file chosen</span>
 			<div class="sv-file__wrapper">
 			</div>
 		</div>
