Fix markup tests

--- a/tests/markup/snapshots/question-errors-v2-top.snap.html
+++ b/tests/markup/snapshots/question-errors-v2-top.snap.html
@@ -1,5 +1,5 @@
 <div style="flex:1 1 100%; max-width:100%; min-width:300px;">
-	<div class="sd-element sd-element--with-frame sd-question sd-question--error sd-row__question sd-row__question--small" data-name="name" id="testid0">
+	<div class="sd-element sd-element--with-frame sd-question sd-question--error sd-question--top sd-row__question sd-row__question--small" data-name="name" id="testid0">
 		<div aria-live="polite" class="sd-question__erbox sd-question__erbox--above-question sd-question__erbox--outside-question" id="testid0_errors" role="alert">
 			<div>
 				<span aria-hidden="true">
