--- a/tests/markup/snapshots/panel-question-headers.snap.html
+++ b/tests/markup/snapshots/panel-question-headers.snap.html
@@ -11,7 +11,7 @@
 		<div class="sd-panel__content" id="testidp0_content">
 			<div class="sd-clearfix sd-row">
 				<div style="flex:1 1 100%; max-width:100%; min-width:300px;">
-					<div class="sd-element sd-element--nested sd-question sd-row__question sd-row__question--small" data-name="question1" id="testid0">
+					<div class="sd-element sd-element--nested sd-question sd-question--top sd-row__question sd-row__question--small" data-name="question1" id="testid0">
 						<div class="sd-element__header sd-element__header--location-top sd-question__header sd-question__header--location-top">
 							<h5 class="sd-element__title sd-question__title sd-title" id="testid0_ariaTitle">
 								<span class="sv-string-viewer">Question title</span>
