work for https://github.com/surveyjs/private-tasks/issues/266

--- a/tests/markup/snapshots/matrixdynamic-defaultV2.snap.html
+++ b/tests/markup/snapshots/matrixdynamic-defaultV2.snap.html
@@ -158,7 +158,7 @@
 							<div class="sv-action" id="remove-row">
 								<div class="sv-action__content">
 									<button class="sd-action sd-action--icon sd-action--negative sd-matrixdynamic__btn sd-matrixdynamic__remove-btn" role="button" tabindex="0" title="Remove" type="button">
-										<svg aria-label="Remove" class="sd-action__icon sv-svg-icon" role="img" style="height:24px; width:24px;">
+										<svg aria-label="Remove" class="sd-action__icon sv-svg-icon" role="img">
 											<use xlink:href="#icon-delete" class="">
 											</use>
 											<title class="">Remove</title>
@@ -310,7 +310,7 @@
 							<div class="sv-action" id="remove-row">
 								<div class="sv-action__content">
 									<button class="sd-action sd-action--icon sd-action--negative sd-matrixdynamic__btn sd-matrixdynamic__remove-btn" role="button" tabindex="0" title="Remove" type="button">
-										<svg aria-label="Remove" class="sd-action__icon sv-svg-icon" role="img" style="height:24px; width:24px;">
+										<svg aria-label="Remove" class="sd-action__icon sv-svg-icon" role="img">
 											<use xlink:href="#icon-delete" class="">
 											</use>
 											<title class="">Remove</title>
