fixed markup etalons

--- a/tests/markup/snapshots/paneldynamic-no-footer-1.snap.html
+++ b/tests/markup/snapshots/paneldynamic-no-footer-1.snap.html
@@ -26,7 +26,7 @@
 								</div>
 								<div class="sv-action sv-action--hidden sv-dots">
 									<div class="sv-action__content">
-										<button class="sv-action-bar-item sv-dots__item" role="button" tabindex="0" title="More" type="button">
+										<button class="sv-action-bar-item sv-action-bar-item--icon sv-dots__item" role="button" tabindex="0" title="More" type="button">
 											<svg aria-label="More" class="sv-action-bar-item__icon sv-svg-icon" role="img" style="height:24px; width:24px;">
 												<use xlink:href="#icon-more" class="">
 												</use>
