--- a/tests/markup/snapshots/file-mob2-zip-png.snap.html
+++ b/tests/markup/snapshots/file-mob2-zip-png.snap.html
@@ -62,7 +62,7 @@
 			<div class="sv-action-bar sv-action-bar--default-size-mode">
 				<div class="sv-action" id="prevPage">
 					<div class="sv-action__content">
-						<button class="sv-action-bar-item" role="button" tabindex="0" type="button">
+						<button class="sv-action-bar-item sv-action-bar-item--icon" role="button" tabindex="0" type="button">
 							<svg class="sv-action-bar-item__icon sv-svg-icon" role="img" style="height:16px; width:16px;">
 								<use xlink:href="#icon-arrowleft" class="">
 								</use>
@@ -79,7 +79,7 @@
 				</div>
 				<div class="sv-action" id="nextPage">
 					<div class="sv-action__content">
-						<button class="sv-action-bar-item" role="button" tabindex="0" type="button">
+						<button class="sv-action-bar-item sv-action-bar-item--icon" role="button" tabindex="0" type="button">
 							<svg class="sv-action-bar-item__icon sv-svg-icon" role="img" style="height:16px; width:16px;">
 								<use xlink:href="#icon-arrowright" class="">
 								</use>
