martix classes and styles

--- a/tests/markup/snapshots/matrixdynamic-default.snap.html
+++ b/tests/markup/snapshots/matrixdynamic-default.snap.html
@@ -12,7 +12,7 @@
 					<th class="sv_matrix_cell_header sv_matrix_cell--dropdown">
 						<span class="sv-string-viewer">Column 3</span>
 					</th>
-					<td class="sv_matrix_cell_header sv_matrix_cell--dropdown">
+					<td class="sv_matrix_cell_header sv_matrix_cell--action">
 					</td>
 				</tr>
 			</thead>
