--- a/tests/markup/snapshots/matrixdynamic-defaultV2.snap.html
+++ b/tests/markup/snapshots/matrixdynamic-defaultV2.snap.html
@@ -12,7 +12,7 @@
 					<th class="sd-table__cell sd-table__cell--column-title sd-table__cell--dropdown sd-table__cell--header">
 						<span class="sv-string-viewer">Column 3</span>
 					</th>
-					<td class="sd-table__cell sd-table__cell--column-title sd-table__cell--dropdown sd-table__cell--empty sd-table__cell--header">
+					<td class="sd-table__cell sd-table__cell--action sd-table__cell--column-title sd-table__cell--empty sd-table__cell--header">
 					</td>
 				</tr>
 			</thead>
