fix error cells styles and update screenshots

--- a/tests/markup/snapshots/matrixdropdown-cell-errors-top.snap.html
+++ b/tests/markup/snapshots/matrixdropdown-cell-errors-top.snap.html
@@ -13,7 +13,7 @@
 		</thead>
 		<tbody>
 			<tr class="sd-table__row">
-				<td class="sd-table__cell sd-table__cell--empty" colspan="1" data-responsive-title="" title="">
+				<td class="sd-table__cell sd-table__cell--empty sd-table__cell--error" colspan="1" data-responsive-title="" title="">
 				</td>
 				<td class="sd-table__cell sd-table__cell--error sd-table__cell--error-top" colspan="1" data-responsive-title="" title="">
 					<div aria-live="polite" class="sd-question__erbox sd-question__erbox--above-question sd-question__erbox--outside-question" id="testid0row1cell1_errors" role="alert">
