Work for #6738 - No space appears for a Progress Bar and the last question on a page - passed container to navigation on all platforms

--- a/examples/react/index.html
+++ b/examples/react/index.html
@@ -14,10 +14,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.js"></script>
 
     <!-- <link rel="stylesheet" href="https://unpkg.com/bootstrap@3.3.7/dist/css/bootstrap.min.css"> -->
-    <!-- <link rel="stylesheet" href="../../build/survey-react/survey.css" /> -->
-    <!-- <link rel="stylesheet" href="../../build/survey-react/modern.css" /> -->
-    <link rel="stylesheet" href="../../build/survey-react/defaultV2.css" />
-    <script src="../../build/survey-react/survey.react.js"></script>
+    <!-- <link rel="stylesheet" href="../../build/survey-core/survey.css" /> -->
+    <!-- <link rel="stylesheet" href="../../build/survey-core/modern.css" /> -->
+    <link rel="stylesheet" href="../../build/survey-core/defaultV2.css" />
+    <script src="../../build/survey-core/survey.core.js"></script>
+    <!-- <script src="../../build/survey-react/survey.react.js"></script> -->
+    <script src="../../build/survey-react-ui/survey-react-ui.js"></script>
   </head>
 
   <body>
