--- a/examples/knockout/index.html
+++ b/examples/knockout/index.html
@@ -8,12 +8,12 @@
 
     <!-- <link rel="stylesheet" href="https://unpkg.com/bootstrap@3.3.7/dist/css/bootstrap.min.css"> -->
     <!-- <script src="../../build/survey-core/plugins/bootstrap-integration.js"></script> -->
-    <link rel="stylesheet" href="../../build/survey-knockout/survey.css" />
-    <!-- <link rel="stylesheet" href="../../build/survey-knockout/modern.css" /> -->
-    <link rel="stylesheet" href="../../build/survey-knockout/defaultV2.css" />
+    <!-- <link rel="stylesheet" href="../../build/survey-core/survey.css" /> -->
+    <!-- <link rel="stylesheet" href="../../build/survey-core/modern.css" /> -->
+    <link rel="stylesheet" href="../../build/survey-core/defaultV2.css" />
     <script src="../../build/survey-core/survey.core.js"></script>
-    <script src="../../build/survey-knockout/survey.ko.js"></script>
-    <!-- <script src="../../build/survey-knockout-ui/survey-knockout-ui.js"></script> -->
+    <!-- <script src="../../build/survey-knockout/survey.ko.js"></script> -->
+    <script src="../../build/survey-knockout-ui/survey-knockout-ui.js"></script>
 </head>
 
   <body>
