work for the https://github.com/surveyjs/survey-library/issues/6859 (fix markups)

--- a/tests/markup/snapshots/radiogroup-modern.snap.html
+++ b/tests/markup/snapshots/radiogroup-modern.snap.html
@@ -1,6 +1,6 @@
-<fieldset class="sv-selectbase" role="presentation">
+<fieldset aria-invalid="false" aria-label="Question title" aria-required="false" class="sv-selectbase">
 	<div class="sv-item sv-q-col-1 sv-radio sv-radio--allowhover sv-selectbase__item" role="presentation">
-		<label aria-label="item1" class="sv-selectbase__label">
+		<label class="sv-selectbase__label">
 			<input class="sv-item__control sv-visuallyhidden" id="testid0i_0" name="name_testid0" type="radio" value="item1">
 			<span class="sv-item__decorator sv-radio__decorator sv-selectbase__decorator">
 				<svg class="sv-item__svg sv-radio__svg">
@@ -14,7 +14,7 @@
 		</label>
 	</div>
 	<div class="sv-item sv-q-col-1 sv-radio sv-radio--allowhover sv-selectbase__item" role="presentation">
-		<label aria-label="item2" class="sv-selectbase__label">
+		<label class="sv-selectbase__label">
 			<input class="sv-item__control sv-visuallyhidden" id="testid0i_1" name="name_testid0" type="radio" value="item2">
 			<span class="sv-item__decorator sv-radio__decorator sv-selectbase__decorator">
 				<svg class="sv-item__svg sv-radio__svg">
