--- a/tests/markup/snapshots/checkbox-columns-no-head-foot.snap.html
+++ b/tests/markup/snapshots/checkbox-columns-no-head-foot.snap.html
@@ -1,27 +1,27 @@
-<fieldset class="sv_qcbc sv_qcbx" role="presentation">
+<fieldset aria-invalid="false" aria-label="Question title" aria-required="false" class="sv_qcbc sv_qcbx">
 	<legend class="sv-hidden" role="presentation">
 	</legend>
 	<div>
 		<div class="sv_q_select_column sv-q-column-2" role="presentation">
 			<div class="sv_q_checkbox sv_q_checkbox_selectall" role="presentation">
-				<label aria-label="Select All" class="sv_q_checkbox_label">
-					<input class="sv_q_checkbox_control_item" id="testid0i_0" name="name" role="option" type="checkbox" value="">
+				<label class="sv_q_checkbox_label">
+					<input class="sv_q_checkbox_control_item" id="testid0i_0" name="name" type="checkbox" value="">
 					<span class="sv_q_checkbox_control_label">
 						<span class="sv-string-viewer">Select All</span>
 					</span>
 				</label>
 			</div>
 			<div class="sv_q_checkbox" role="presentation">
-				<label aria-label="item2" class="sv_q_checkbox_label">
-					<input class="sv_q_checkbox_control_item" id="testid0i_2" name="name" role="option" type="checkbox" value="item2">
+				<label class="sv_q_checkbox_label">
+					<input class="sv_q_checkbox_control_item" id="testid0i_2" name="name" type="checkbox" value="item2">
 					<span class="sv_q_checkbox_control_label">
 						<span class="sv-string-viewer">item2</span>
 					</span>
 				</label>
 			</div>
 			<div class="sv_q_checkbox" role="presentation">
-				<label aria-label="Other (describe)" class="sv_q_checkbox_label">
-					<input class="sv_q_checkbox_control_item" id="testid0i_4" name="name" role="option" type="checkbox" value="other">
+				<label class="sv_q_checkbox_label">
+					<input class="sv_q_checkbox_control_item" id="testid0i_4" name="name" type="checkbox" value="other">
 					<span class="sv_q_checkbox_control_label">
 						<span class="sv-string-viewer">Other (describe)</span>
 					</span>
@@ -30,16 +30,16 @@
 		</div>
 		<div class="sv_q_select_column sv-q-column-2" role="presentation">
 			<div class="sv_q_checkbox" role="presentation">
-				<label aria-label="item1" class="sv_q_checkbox_label">
-					<input class="sv_q_checkbox_control_item" id="testid0i_1" name="name" role="option" type="checkbox" value="item1">
+				<label class="sv_q_checkbox_label">
+					<input class="sv_q_checkbox_control_item" id="testid0i_1" name="name" type="checkbox" value="item1">
 					<span class="sv_q_checkbox_control_label">
 						<span class="sv-string-viewer">item1</span>
 					</span>
 				</label>
 			</div>
 			<div class="sv_q_checkbox sv_q_checkbox_none" role="presentation">
-				<label aria-label="None" class="sv_q_checkbox_label">
-					<input class="sv_q_checkbox_control_item" id="testid0i_3" name="name" role="option" type="checkbox" value="none">
+				<label class="sv_q_checkbox_label">
+					<input class="sv_q_checkbox_control_item" id="testid0i_3" name="name" type="checkbox" value="none">
 					<span class="sv_q_checkbox_control_label">
 						<span class="sv-string-viewer">None</span>
 					</span>
