--- a/tests/markup/snapshots/checkbox-columns.snap.html
+++ b/tests/markup/snapshots/checkbox-columns.snap.html
@@ -1,11 +1,11 @@
-<fieldset class="sv_qcbc sv_qcbx" role="presentation">
+<fieldset aria-invalid="false" aria-label="Question title" aria-required="false" class="sv_qcbc sv_qcbx">
 	<legend class="sv-hidden" role="presentation">
 	</legend>
 	<div>
 		<div class="sv_q_select_column sv-q-column-2" role="presentation">
 			<div class="sv_q_checkbox" role="presentation">
-				<label aria-label="item1" class="sv_q_checkbox_label">
-					<input class="sv_q_checkbox_control_item" id="testid0i_0" name="name" role="option" type="checkbox" value="item1">
+				<label class="sv_q_checkbox_label">
+					<input class="sv_q_checkbox_control_item" id="testid0i_0" name="name" type="checkbox" value="item1">
 					<span class="sv_q_checkbox_control_label">
 						<span class="sv-string-viewer">item1</span>
 					</span>
@@ -14,8 +14,8 @@
 		</div>
 		<div class="sv_q_select_column sv-q-column-2" role="presentation">
 			<div class="sv_q_checkbox" role="presentation">
-				<label aria-label="item2" class="sv_q_checkbox_label">
-					<input class="sv_q_checkbox_control_item" id="testid0i_1" name="name" role="option" type="checkbox" value="item2">
+				<label class="sv_q_checkbox_label">
+					<input class="sv_q_checkbox_control_item" id="testid0i_1" name="name" type="checkbox" value="item2">
 					<span class="sv_q_checkbox_control_label">
 						<span class="sv-string-viewer">item2</span>
 					</span>
