--- a/tests/markup/snapshots/comment-into-question-allowResize.snap.html
+++ b/tests/markup/snapshots/comment-into-question-allowResize.snap.html
@@ -1,6 +1,6 @@
-<fieldset class="sv_qcbc" role="presentation">
+<fieldset aria-invalid="false" aria-label="name" aria-required="false" class="sv_qcbc">
 	<div class="sv_q_radiogroup sv-q-col-1" role="presentation">
-		<label aria-label="Item 1" class="sv_q_radiogroup_label">
+		<label class="sv_q_radiogroup_label">
 			<input class="sv_q_radiogroup_control_item" id="testid0i_0" name="name_testid0" type="radio" value="Item 1">
 			<span>
 				<span class="sv-string-viewer">Item 1</span>
@@ -8,7 +8,7 @@
 		</label>
 	</div>
 	<div class="sv_q_radiogroup sv-q-col-1" role="presentation">
-		<label aria-label="Item 2" class="sv_q_radiogroup_label">
+		<label class="sv_q_radiogroup_label">
 			<input class="sv_q_radiogroup_control_item" id="testid0i_1" name="name_testid0" type="radio" value="Item 2">
 			<span>
 				<span class="sv-string-viewer">Item 2</span>
@@ -16,7 +16,7 @@
 		</label>
 	</div>
 	<div class="sv_q_radiogroup sv-q-col-1" role="presentation">
-		<label aria-label="Item 3" class="sv_q_radiogroup_label">
+		<label class="sv_q_radiogroup_label">
 			<input class="sv_q_radiogroup_control_item" id="testid0i_2" name="name_testid0" type="radio" value="Item 3">
 			<span>
 				<span class="sv-string-viewer">Item 3</span>
@@ -24,7 +24,7 @@
 		</label>
 	</div>
 	<div class="checked sv_q_radiogroup sv-q-col-1" role="presentation">
-		<label aria-label="Other (describe)" class="sv_q_radiogroup_label">
+		<label class="sv_q_radiogroup_label">
 			<input checked="" class="sv_q_radiogroup_control_item" id="testid0i_3" name="name_testid0" type="radio" value="other">
 			<span>
 				<span class="sv-string-viewer">Other (describe)</span>
