--- a/tests/markup/snapshots/radiogroup-columns-no-head-foot.snap.html
+++ b/tests/markup/snapshots/radiogroup-columns-no-head-foot.snap.html
@@ -1,8 +1,8 @@
-<fieldset class="sv_qcbc" role="presentation">
+<fieldset aria-invalid="false" aria-label="Question title" aria-required="false" class="sv_qcbc">
 	<div>
 		<div class="sv_q_select_column sv-q-column-2" role="presentation">
 			<div class="sv_q_radiogroup" role="presentation">
-				<label aria-label="item1" class="sv_q_radiogroup_label">
+				<label class="sv_q_radiogroup_label">
 					<input class="sv_q_radiogroup_control_item" id="testid0i_0" name="name_testid0" type="radio" value="item1">
 					<span>
 						<span class="sv-string-viewer">item1</span>
@@ -10,7 +10,7 @@
 				</label>
 			</div>
 			<div class="sv_q_radiogroup" role="presentation">
-				<label aria-label="None" class="sv_q_radiogroup_label">
+				<label class="sv_q_radiogroup_label">
 					<input class="sv_q_radiogroup_control_item" id="testid0i_2" name="name_testid0" type="radio" value="none">
 					<span>
 						<span class="sv-string-viewer">None</span>
@@ -20,7 +20,7 @@
 		</div>
 		<div class="sv_q_select_column sv-q-column-2" role="presentation">
 			<div class="sv_q_radiogroup" role="presentation">
-				<label aria-label="item2" class="sv_q_radiogroup_label">
+				<label class="sv_q_radiogroup_label">
 					<input class="sv_q_radiogroup_control_item" id="testid0i_1" name="name_testid0" type="radio" value="item2">
 					<span>
 						<span class="sv-string-viewer">item2</span>
@@ -28,7 +28,7 @@
 				</label>
 			</div>
 			<div class="sv_q_radiogroup" role="presentation">
-				<label aria-label="Other (describe)" class="sv_q_radiogroup_label">
+				<label class="sv_q_radiogroup_label">
 					<input class="sv_q_radiogroup_control_item" id="testid0i_3" name="name_testid0" type="radio" value="other">
 					<span>
 						<span class="sv-string-viewer">Other (describe)</span>
