--- a/tests/markup/snapshots/radiogroup-columns.snap.html
+++ b/tests/markup/snapshots/radiogroup-columns.snap.html
@@ -1,8 +1,8 @@
-<fieldset class="sv_qcbc" role="presentation">
+<fieldset aria-invalid="false" aria-label="Question title" aria-required="false" class="sv_qcbc">
 	<div>
 		<div class="sv_q_select_column sv-q-column-2" role="presentation">
 			<div class="sv_q_radiogroup" role="presentation">
-				<label aria-label="item1" class="sv_q_radiogroup_label">
+				<label class="sv_q_radiogroup_label">
 					<input class="sv_q_radiogroup_control_item" id="testid0i_0" name="name_testid0" type="radio" value="item1">
 					<span>
 						<span class="sv-string-viewer">item1</span>
@@ -12,7 +12,7 @@
 		</div>
 		<div class="sv_q_select_column sv-q-column-2" role="presentation">
 			<div class="sv_q_radiogroup" role="presentation">
-				<label aria-label="item2" class="sv_q_radiogroup_label">
+				<label class="sv_q_radiogroup_label">
 					<input class="sv_q_radiogroup_control_item" id="testid0i_1" name="name_testid0" type="radio" value="item2">
 					<span>
 						<span class="sv-string-viewer">item2</span>
