--- a/tests/markup/snapshots/radiogroup-v2.snap.html
+++ b/tests/markup/snapshots/radiogroup-v2.snap.html
@@ -1,6 +1,6 @@
-<fieldset class="sd-selectbase" role="presentation">
+<fieldset aria-invalid="false" aria-label="Question title" aria-required="false" class="sd-selectbase">
 	<div class="sd-item sd-item--allowhover sd-radio sd-radio--allowhover sd-selectbase__item sv-q-col-1" role="presentation">
-		<label aria-label="item1" class="sd-selectbase__label">
+		<label class="sd-selectbase__label">
 			<input class="sd-item__control sd-radio__control sd-visuallyhidden" id="testid0i_0" name="name_testid0" type="radio" value="item1">
 			<span class="sd-item__decorator sd-radio__decorator">
 			</span>
@@ -10,7 +10,7 @@
 		</label>
 	</div>
 	<div class="sd-item sd-item--allowhover sd-radio sd-radio--allowhover sd-selectbase__item sv-q-col-1" role="presentation">
-		<label aria-label="item2" class="sd-selectbase__label">
+		<label class="sd-selectbase__label">
 			<input class="sd-item__control sd-radio__control sd-visuallyhidden" id="testid0i_1" name="name_testid0" type="radio" value="item2">
 			<span class="sd-item__decorator sd-radio__decorator">
 			</span>
