Fix markup tests

--- a/tests/markup/snapshots/multipletext-error-bottom-v2.snap.html
+++ b/tests/markup/snapshots/multipletext-error-bottom-v2.snap.html
@@ -2,7 +2,7 @@
 	<tbody>
 		<tr class="sd-multipletext__row">
 			<td class="sd-multipletext__cell">
-				<label class="sd-input sd-multipletext__item-container sd-multipletext__item-container--error">
+				<label class="sd-input sd-multipletext__item-container sd-multipletext__item-container--allow-focus sd-multipletext__item-container--error">
 					<span class="sd-multipletext__item-title">
 						<span class="sv-string-viewer">Text 1</span>
 						<span>&nbsp;</span>
