work for the https://github.com/surveyjs/survey-library/issues/6859 (fix markups-2)

--- a/tests/markup/snapshots/matrixdynamic-show-in-multiple-columns-mobile.snap.html
+++ b/tests/markup/snapshots/matrixdynamic-show-in-multiple-columns-mobile.snap.html
@@ -25,7 +25,7 @@
 				</td>
 				<td class="sd-table__cell" colspan="1" data-responsive-title="col1" title="col1">
 					<div class="sd-table__question-wrapper">
-						<fieldset aria-invalid="false" aria-labelledby="testid0row1cell1_ariaTitle" aria-required="true" class="sd-selectbase sd-selectbase--row">
+						<fieldset aria-invalid="false" aria-label="col1" aria-required="true" class="sd-selectbase sd-selectbase--row">
 							<div class="sd-item sd-item--allowhover sd-radio sd-radio--allowhover sd-selectbase__item sd-selectbase__item--inline" role="presentation">
 								<label class="sd-selectbase__label">
 									<input class="sd-item__control sd-radio__control sd-visuallyhidden" id="testid0row1cell1i_0" name="col1_testid0row1cell1" type="radio" value="Item 1">
@@ -43,7 +43,7 @@
 				</td>
 				<td class="sd-table__cell" colspan="1" data-responsive-title="col2" title="col2">
 					<div class="sd-table__question-wrapper">
-						<fieldset aria-invalid="false" aria-labelledby="testid0row1cell3_ariaTitle" aria-required="true" class="sd-selectbase sd-selectbase--row">
+						<fieldset aria-invalid="false" aria-label="col2" aria-required="true" class="sd-selectbase sd-selectbase--row">
 							<legend class="sv-hidden" role="presentation">
 							</legend>
 							<div class="sd-checkbox sd-checkbox--allowhover sd-item sd-item--allowhover sd-selectbase__item sd-selectbase__item--inline" role="presentation">
