work for the https://github.com/surveyjs/survey-library/issues/6859 (fix ff tests)

--- a/tests/markup/snapshots/checkbox-columns-mobile.snap.html
+++ b/tests/markup/snapshots/checkbox-columns-mobile.snap.html
@@ -1,4 +1,4 @@
-<fieldset aria-invalid="false" aria-label="Question title" aria-required="false" class="sv_qcbc sv_qcbx">
+<fieldset aria-invalid="false" aria-label="Question title" aria-required="false" class="sv_qcbc sv_qcbx" role="listbox">
 	<legend class="sv-hidden" role="presentation">
 	</legend>
 	<div class="sv_q_checkbox sv-q-col-2" role="presentation">
