--- a/tests/markup/snapshots/checkbox-modern.snap.html
+++ b/tests/markup/snapshots/checkbox-modern.snap.html
@@ -1,4 +1,4 @@
-<fieldset aria-invalid="false" aria-label="Question title" aria-required="false" class="sv-selectbase">
+<fieldset aria-invalid="false" aria-label="Question title" aria-required="false" class="sv-selectbase" role="listbox">
 	<legend class="sv-hidden" role="presentation">
 	</legend>
 	<div class="sv-checkbox sv-checkbox--allowhover sv-item sv-q-col-1 sv-selectbase__item" role="presentation">
