--- a/tests/markup/snapshots/checkbox-other-maxlength.snap.html
+++ b/tests/markup/snapshots/checkbox-other-maxlength.snap.html
@@ -1,4 +1,4 @@
-<fieldset aria-invalid="false" aria-label="name" aria-required="false" class="sv_qcbc sv_qcbx">
+<fieldset aria-invalid="false" aria-label="name" aria-required="false" class="sv_qcbc sv_qcbx" role="listbox">
 	<legend class="sv-hidden" role="presentation">
 	</legend>
 	<div class="checked sv_q_checkbox sv-q-col-1" role="presentation">
