--- a/tests/markup/snapshots/checkbox-v2.snap.html
+++ b/tests/markup/snapshots/checkbox-v2.snap.html
@@ -1,4 +1,4 @@
-<fieldset aria-invalid="false" aria-label="Question title" aria-required="false" class="sd-selectbase">
+<fieldset aria-invalid="false" aria-label="Question title" aria-required="false" class="sd-selectbase" role="listbox">
 	<legend class="sv-hidden" role="presentation">
 	</legend>
 	<div class="sd-checkbox sd-checkbox--allowhover sd-item sd-item--allowhover sd-selectbase__item sv-q-col-1" role="presentation">
