--- a/tests/markup/snapshots/radiogroup-modern.snap.html
+++ b/tests/markup/snapshots/radiogroup-modern.snap.html
@@ -1,4 +1,4 @@
-<fieldset aria-invalid="false" aria-label="Question title" aria-required="false" class="sv-selectbase">
+<fieldset aria-invalid="false" aria-label="Question title" aria-required="false" class="sv-selectbase" role="radiogroup">
 	<div class="sv-item sv-q-col-1 sv-radio sv-radio--allowhover sv-selectbase__item" role="presentation">
 		<label class="sv-selectbase__label">
 			<input class="sv-item__control sv-visuallyhidden" id="testid0i_0" name="name_testid0" type="radio" value="item1">
