--- a/tests/markup/snapshots/radiogroup-row-head-foot.snap.html
+++ b/tests/markup/snapshots/radiogroup-row-head-foot.snap.html
@@ -1,4 +1,4 @@
-<fieldset aria-invalid="false" aria-label="Question title" aria-required="false" class="sv_qcbc">
+<fieldset aria-invalid="false" aria-label="Question title" aria-required="false" class="sv_qcbc" role="radiogroup">
 	<div>
 		<div class="sv_q_radiogroup sv_q_radiogroup_inline" role="presentation">
 			<label class="sv_q_radiogroup_label">
