--- a/tests/markup/snapshots/radiogroup-v2.snap.html
+++ b/tests/markup/snapshots/radiogroup-v2.snap.html
@@ -1,4 +1,4 @@
-<fieldset aria-invalid="false" aria-label="Question title" aria-required="false" class="sd-selectbase">
+<fieldset aria-invalid="false" aria-label="Question title" aria-required="false" class="sd-selectbase" role="radiogroup">
 	<div class="sd-item sd-item--allowhover sd-radio sd-radio--allowhover sd-selectbase__item sv-q-col-1" role="presentation">
 		<label class="sd-selectbase__label">
 			<input class="sd-item__control sd-radio__control sd-visuallyhidden" id="testid0i_0" name="name_testid0" type="radio" value="item1">
