--- a/tests/markup/snapshots/radiogroup-columns.snap.html
+++ b/tests/markup/snapshots/radiogroup-columns.snap.html
@@ -1,4 +1,4 @@
-<fieldset aria-invalid="false" aria-label="Question title" aria-required="false" class="sv_qcbc">
+<fieldset aria-invalid="false" aria-label="Question title" aria-required="false" class="sv_qcbc" role="radiogroup">
 	<div>
 		<div class="sv_q_select_column sv-q-column-2" role="presentation">
 			<div class="sv_q_radiogroup" role="presentation">
