--- a/tests/markup/snapshots/radiogroup-row-no-head-foot.snap.html
+++ b/tests/markup/snapshots/radiogroup-row-no-head-foot.snap.html
@@ -1,4 +1,4 @@
-<fieldset aria-invalid="false" aria-label="Question title" aria-required="false" class="sv_qcbc">
+<fieldset aria-invalid="false" aria-label="Question title" aria-required="false" class="sv_qcbc" role="radiogroup">
 	<div class="sv_q_radiogroup sv_q_radiogroup_inline" role="presentation">
 		<label class="sv_q_radiogroup_label">
 			<input class="sv_q_radiogroup_control_item" id="testid0i_0" name="name_testid0" type="radio" value="item1">
