PR: A11Y:  Radiogroup and Checkbox (voice over + better structure) (#6937)
* work for the https://github.com/surveyjs/survey-library/issues/6859

* work for the https://github.com/surveyjs/survey-library/issues/6859 (remove code duplication)

* work for the https://github.com/surveyjs/survey-library/issues/6859 (other items)

* work for the https://github.com/surveyjs/survey-library/issues/6859 (fix markups)

* work for the https://github.com/surveyjs/survey-library/issues/6859 (fix markups-2)

* work for the https://github.com/surveyjs/survey-library/issues/6859 (fix markups-3)

* work for the https://github.com/surveyjs/survey-library/issues/6859 (fix markups-4)

* work for the https://github.com/surveyjs/survey-library/issues/6859 (fix ff tests)

* work for the https://github.com/surveyjs/survey-library/issues/6859 (review-1)

--- a/tests/markup/snapshots/checkbox-comment-V2.snap.html
+++ b/tests/markup/snapshots/checkbox-comment-V2.snap.html
@@ -1,9 +1,9 @@
-<fieldset class="sd-selectbase" role="presentation">
+<fieldset aria-invalid="false" aria-label="name" aria-required="false" class="sd-selectbase" role="listbox">
 	<legend class="sv-hidden" role="presentation">
 	</legend>
 	<div class="sd-checkbox sd-checkbox--allowhover sd-item sd-item--allowhover sd-selectbase__item sv-q-col-1" role="presentation">
-		<label aria-label="item1" class="sd-selectbase__label">
-			<input class="sd-checkbox__control sd-item__control sd-visuallyhidden" id="testid0i_0" name="name" role="option" type="checkbox" value="item1">
+		<label class="sd-selectbase__label">
+			<input class="sd-checkbox__control sd-item__control sd-visuallyhidden" id="testid0i_0" name="name" type="checkbox" value="item1">
 			<span class="sd-checkbox__decorator sd-item__decorator">
 				<svg class="sd-checkbox__svg sd-item__svg">
 					<use xlink:href="#icon-v2check" class="">
@@ -20,6 +20,6 @@
 	<div>
 		<span class="sv-string-viewer">Other (describe)</span>
 	</div>
-	<textarea aria-label="name" aria-required="false" class="sd-comment sd-input sd-selectbase__other" id="testid0_comment" placeholder="" style="resize: both;">
+	<textarea aria-label="name" aria-required="false" class="sd-comment sd-input sd-selectbase__other" id="testid0_comment" placeholder="" style="resize:both;">
 	</textarea>
 </div>
