--- a/tests/markup/snapshots/checkbox-other-maxlength.snap.html
+++ b/tests/markup/snapshots/checkbox-other-maxlength.snap.html
@@ -1,9 +1,9 @@
-<fieldset class="sv_qcbc sv_qcbx" role="presentation">
+<fieldset aria-invalid="false" aria-label="name" aria-required="false" class="sv_qcbc sv_qcbx" role="listbox">
 	<legend class="sv-hidden" role="presentation">
 	</legend>
 	<div class="checked sv_q_checkbox sv-q-col-1" role="presentation">
-		<label aria-label="Other (describe)" class="sv_q_checkbox_label">
-			<input checked="" class="sv_q_checkbox_control_item" id="testid0i_0" name="name" role="option" type="checkbox" value="other">
+		<label class="sv_q_checkbox_label">
+			<input checked="" class="sv_q_checkbox_control_item" id="testid0i_0" name="name" type="checkbox" value="other">
 			<span class="sv_q_checkbox_control_label">
 				<span class="sv-string-viewer">Other (describe)</span>
 			</span>
