--- a/tests/markup/snapshots/checkbox-other-V2.snap.html
+++ b/tests/markup/snapshots/checkbox-other-V2.snap.html
@@ -1,9 +1,9 @@
-<fieldset class="sd-selectbase" role="presentation">
+<fieldset aria-invalid="false" aria-label="name" aria-required="false" class="sd-selectbase" role="listbox">
 	<legend class="sv-hidden" role="presentation">
 	</legend>
 	<div class="sd-checkbox sd-checkbox--allowhover sd-item sd-item--allowhover sd-selectbase__item sv-q-col-1" role="presentation">
-		<label aria-label="item1" class="sd-selectbase__label">
-			<input class="sd-checkbox__control sd-item__control sd-visuallyhidden" id="testid0i_0" name="name" role="option" type="checkbox" value="item1">
+		<label class="sd-selectbase__label">
+			<input class="sd-checkbox__control sd-item__control sd-visuallyhidden" id="testid0i_0" name="name" type="checkbox" value="item1">
 			<span class="sd-checkbox__decorator sd-item__decorator">
 				<svg class="sd-checkbox__svg sd-item__svg">
 					<use xlink:href="#icon-v2check" class="">
@@ -16,8 +16,8 @@
 		</label>
 	</div>
 	<div class="sd-checkbox sd-checkbox--checked sd-item sd-item--checked sd-selectbase__item sv-q-col-1" role="presentation">
-		<label aria-label="Other (describe)" class="sd-selectbase__label">
-			<input checked="" class="sd-checkbox__control sd-item__control sd-visuallyhidden" id="testid0i_1" name="name" role="option" type="checkbox" value="other">
+		<label class="sd-selectbase__label">
+			<input checked="" class="sd-checkbox__control sd-item__control sd-visuallyhidden" id="testid0i_1" name="name" type="checkbox" value="other">
 			<span class="sd-checkbox__decorator sd-item__decorator">
 				<svg class="sd-checkbox__svg sd-item__svg">
 					<use xlink:href="#icon-v2check" class="">
@@ -30,7 +30,7 @@
 		</label>
 	</div>
 	<div class="form-group sd-question__comment-area">
-		<textarea aria-label="name" aria-required="false" class="sd-comment sd-input sd-selectbase__other" id="testid0_other" placeholder="" style="resize: both;">
+		<textarea aria-label="name" aria-required="false" class="sd-comment sd-input sd-selectbase__other" id="testid0_other" placeholder="" style="resize:both;">
 		</textarea>
 	</div>
 </fieldset>
