--- a/tests/markup/snapshots/checkbox-other.snap.html
+++ b/tests/markup/snapshots/checkbox-other.snap.html
@@ -1,40 +1,40 @@
-<fieldset class="sv_qcbc sv_qcbx" role="presentation">
+<fieldset aria-invalid="false" aria-label="Question title" aria-required="false" class="sv_qcbc sv_qcbx" role="listbox">
 	<legend class="sv-hidden" role="presentation">
 	</legend>
 	<div class="sv_q_checkbox sv-q-col-1" role="presentation">
-		<label aria-label="item1" class="sv_q_checkbox_label">
-			<input class="sv_q_checkbox_control_item" id="testid0i_0" name="name" role="option" type="checkbox" value="item1">
+		<label class="sv_q_checkbox_label">
+			<input class="sv_q_checkbox_control_item" id="testid0i_0" name="name" type="checkbox" value="item1">
 			<span class="sv_q_checkbox_control_label">
 				<span class="sv-string-viewer">item1</span>
 			</span>
 		</label>
 	</div>
 	<div class="sv_q_checkbox sv-q-col-1" role="presentation">
-		<label aria-label="item2" class="sv_q_checkbox_label">
-			<input class="sv_q_checkbox_control_item" id="testid0i_1" name="name" role="option" type="checkbox" value="item2">
+		<label class="sv_q_checkbox_label">
+			<input class="sv_q_checkbox_control_item" id="testid0i_1" name="name" type="checkbox" value="item2">
 			<span class="sv_q_checkbox_control_label">
 				<span class="sv-string-viewer">item2</span>
 			</span>
 		</label>
 	</div>
 	<div class="sv_q_checkbox sv-q-col-1" role="presentation">
-		<label aria-label="item3" class="sv_q_checkbox_label">
-			<input class="sv_q_checkbox_control_item" id="testid0i_2" name="name" role="option" type="checkbox" value="item3">
+		<label class="sv_q_checkbox_label">
+			<input class="sv_q_checkbox_control_item" id="testid0i_2" name="name" type="checkbox" value="item3">
 			<span class="sv_q_checkbox_control_label">
 				<span class="sv-string-viewer">item3</span>
 			</span>
 		</label>
 	</div>
 	<div class="checked sv_q_checkbox sv-q-col-1" role="presentation">
-		<label aria-label="Other (describe)" class="sv_q_checkbox_label">
-			<input checked="" class="sv_q_checkbox_control_item" id="testid0i_3" name="name" role="option" type="checkbox" value="other">
+		<label class="sv_q_checkbox_label">
+			<input checked="" class="sv_q_checkbox_control_item" id="testid0i_3" name="name" type="checkbox" value="other">
 			<span class="sv_q_checkbox_control_label">
 				<span class="sv-string-viewer">Other (describe)</span>
 			</span>
 		</label>
 	</div>
 	<div class="form-group">
-		<textarea aria-label="Question title" aria-required="false" class="sv_q_checkbox_other sv_q_other" id="testid0_other" placeholder="" style="resize: both;">
+		<textarea aria-label="Question title" aria-required="false" class="sv_q_checkbox_other sv_q_other" id="testid0_other" placeholder="" style="resize:both;">
 		</textarea>
 	</div>
 </fieldset>
