--- a/tests/markup/snapshots/matrixdynamic-show-in-multiple-columns-mobile.snap.html
+++ b/tests/markup/snapshots/matrixdynamic-show-in-multiple-columns-mobile.snap.html
@@ -25,9 +25,9 @@
 				</td>
 				<td class="sd-table__cell" colspan="1" data-responsive-title="col1" title="col1">
 					<div class="sd-table__question-wrapper">
-						<fieldset class="sd-selectbase sd-selectbase--row" role="presentation">
+						<fieldset aria-invalid="false" aria-label="col1" aria-required="true" class="sd-selectbase sd-selectbase--row" role="radiogroup">
 							<div class="sd-item sd-item--allowhover sd-radio sd-radio--allowhover sd-selectbase__item sd-selectbase__item--inline" role="presentation">
-								<label aria-label="Item 1" class="sd-selectbase__label">
+								<label class="sd-selectbase__label">
 									<input class="sd-item__control sd-radio__control sd-visuallyhidden" id="testid0row1cell1i_0" name="col1_testid0row1cell1" type="radio" value="Item 1">
 									<span class="sd-item__decorator sd-radio__decorator">
 									</span>
@@ -43,12 +43,12 @@
 				</td>
 				<td class="sd-table__cell" colspan="1" data-responsive-title="col2" title="col2">
 					<div class="sd-table__question-wrapper">
-						<fieldset class="sd-selectbase sd-selectbase--row" role="presentation">
+						<fieldset aria-invalid="false" aria-label="col2" aria-required="true" class="sd-selectbase sd-selectbase--row" role="listbox">
 							<legend class="sv-hidden" role="presentation">
 							</legend>
 							<div class="sd-checkbox sd-checkbox--allowhover sd-item sd-item--allowhover sd-selectbase__item sd-selectbase__item--inline" role="presentation">
-								<label aria-label="Item 1" class="sd-selectbase__label">
-									<input class="sd-checkbox__control sd-item__control sd-visuallyhidden" id="testid0row1cell3i_0" name="col2" role="option" type="checkbox" value="Item 1">
+								<label class="sd-selectbase__label">
+									<input class="sd-checkbox__control sd-item__control sd-visuallyhidden" id="testid0row1cell3i_0" name="col2" type="checkbox" value="Item 1">
 									<span class="sd-checkbox__decorator sd-item__decorator">
 										<svg class="sd-checkbox__svg sd-item__svg">
 											<use xlink:href="#icon-v2check" class="">
@@ -61,8 +61,8 @@
 								</label>
 							</div>
 							<div class="sd-checkbox sd-checkbox--allowhover sd-item sd-item--allowhover sd-selectbase__item sd-selectbase__item--inline" role="presentation">
-								<label aria-label="Item 2" class="sd-selectbase__label">
-									<input class="sd-checkbox__control sd-item__control sd-visuallyhidden" id="testid0row1cell3i_1" name="col2" role="option" type="checkbox" value="Item 2">
+								<label class="sd-selectbase__label">
+									<input class="sd-checkbox__control sd-item__control sd-visuallyhidden" id="testid0row1cell3i_1" name="col2" type="checkbox" value="Item 2">
 									<span class="sd-checkbox__decorator sd-item__decorator">
 										<svg class="sd-checkbox__svg sd-item__svg">
 											<use xlink:href="#icon-v2check" class="">
