--- a/tests/markup/snapshots/radiogroup-columns-mobile.snap.html
+++ b/tests/markup/snapshots/radiogroup-columns-mobile.snap.html
@@ -1,6 +1,6 @@
-<fieldset class="sv_qcbc" role="presentation">
+<fieldset aria-invalid="false" aria-label="Question title" aria-required="false" class="sv_qcbc" role="radiogroup">
 	<div class="sv_q_radiogroup sv-q-col-2" role="presentation">
-		<label aria-label="item1" class="sv_q_radiogroup_label">
+		<label class="sv_q_radiogroup_label">
 			<input class="sv_q_radiogroup_control_item" id="testid0i_0" name="name_testid0" type="radio" value="item1">
 			<span>
 				<span class="sv-string-viewer">item1</span>
@@ -8,7 +8,7 @@
 		</label>
 	</div>
 	<div class="sv_q_radiogroup sv-q-col-2" role="presentation">
-		<label aria-label="item2" class="sv_q_radiogroup_label">
+		<label class="sv_q_radiogroup_label">
 			<input class="sv_q_radiogroup_control_item" id="testid0i_1" name="name_testid0" type="radio" value="item2">
 			<span>
 				<span class="sv-string-viewer">item2</span>
@@ -16,7 +16,7 @@
 		</label>
 	</div>
 	<div class="sv_q_radiogroup sv-q-col-2" role="presentation">
-		<label aria-label="item3" class="sv_q_radiogroup_label">
+		<label class="sv_q_radiogroup_label">
 			<input class="sv_q_radiogroup_control_item" id="testid0i_2" name="name_testid0" type="radio" value="item3">
 			<span>
 				<span class="sv-string-viewer">item3</span>
