Work for #6908: fix renderedPlaceholder for different modes

--- a/tests/markup/snapshots/file-2.snap.html
+++ b/tests/markup/snapshots/file-2.snap.html
@@ -2,30 +2,30 @@
 	<input aria-invalid="false" aria-label="Question title" aria-required="false" class="sd-visuallyhidden" id="testid0i" tabindex="-1" title="Choose file(s)..." type="file">
 	<div class="sd-file__drag-area">
 		<div class="sd-file__decorator">
-			<span class="sd-file__drag-area-placeholder">Drag and drop a file here or click the button below and choose a file to upload.</span>
+			<span class="sd-file__drag-area-placeholder">Drag and drop a file here or click the button below to select a file to upload.</span>
 			<div class="sd-file__wrapper">
 				<div class="sd-action-bar sd-file__actions-container">
 					<div class="sv-action" id="sv-file-choose-file">
 						<div class="sv-action__content">
-							<label aria-label="Choose file" class="sd-action sd-file__choose-btn sd-file__choose-btn--text" role="button" tabindex="0">
-								<svg aria-label="Choose file" class="sv-svg-icon" role="img">
+							<label aria-label="Select File" class="sd-action sd-file__choose-btn sd-file__choose-btn--text" role="button" tabindex="0">
+								<svg aria-label="Select File" class="sv-svg-icon" role="img">
 									<use xlink:href="#icon-choosefile" class="">
 									</use>
-									<title class="">Choose file</title>
+									<title class="">Select File</title>
 								</svg>
-								<span>Choose file</span>
+								<span>Select File</span>
 							</label>
 						</div>
 					</div>
 					<div class="sv-action sv-action--hidden" id="sv-file-start-camera">
 						<div class="sv-action__content">
-							<button class="sd-action" role="button" tabindex="0" title="Take picture" type="button">
-								<svg aria-label="Take picture" class="sd-action__icon sv-svg-icon" role="img">
+							<button class="sd-action" role="button" tabindex="0" title="Take Photo" type="button">
+								<svg aria-label="Take Photo" class="sd-action__icon sv-svg-icon" role="img">
 									<use xlink:href="#icon-takepicture_24x24" class="">
 									</use>
-									<title class="">Take picture</title>
+									<title class="">Take Photo</title>
 								</svg>
-								<span class="sd-action__title sv-action-bar-item__title--with-icon">Take picture</span>
+								<span class="sd-action__title sv-action-bar-item__title--with-icon">Take Photo</span>
 							</button>
 						</div>
 					</div>
