--- a/tests/markup/snapshots/file-mob2-png.snap.html
+++ b/tests/markup/snapshots/file-mob2-png.snap.html
@@ -2,7 +2,7 @@
 	<input aria-invalid="false" aria-label="Question title" aria-required="false" class="sd-visuallyhidden" id="testid0i" tabindex="-1" title=" " type="file">
 	<div class="sd-file__drag-area">
 		<div class="sd-file__decorator">
-			<span class="sd-file__drag-area-placeholder">Drag and drop a file here or click the button below and choose a file to upload.</span>
+			<span class="sd-file__drag-area-placeholder">Drag and drop a file here or click the button below to select a file to upload.</span>
 			<div class="sd-file__wrapper">
 				<div class="sd-action-bar sd-file__actions-container">
 					<div class="sv-action" id="sv-file-choose-file">
@@ -19,11 +19,11 @@
 					</div>
 					<div class="sv-action sv-action--hidden" id="sv-file-start-camera">
 						<div class="sv-action__content">
-							<button class="sd-context-btn" role="button" tabindex="0" title="Take picture" type="button">
-								<svg aria-label="Take picture" class="sd-action__icon sv-svg-icon" role="img">
+							<button class="sd-context-btn" role="button" tabindex="0" title="Take Photo" type="button">
+								<svg aria-label="Take Photo" class="sd-action__icon sv-svg-icon" role="img">
 									<use xlink:href="#icon-takepicture_24x24" class="">
 									</use>
-									<title class="">Take picture</title>
+									<title class="">Take Photo</title>
 								</svg>
 							</button>
 						</div>
