--- a/tests/markup/snapshots/file-modern.snap.html
+++ b/tests/markup/snapshots/file-modern.snap.html
@@ -2,10 +2,10 @@
 	<input aria-invalid="false" aria-label="Question title" aria-required="false" class="sv-visuallyhidden" id="testid0i" tabindex="-1" title="Choose file(s)..." type="file">
 	<div>
 		<div class="sv-file__decorator">
-			<span class="sv-hidden">Drag and drop a file here or click the button below and choose a file to upload.</span>
+			<span class="sv-hidden">Drag and drop a file here or click the button below to select a file to upload.</span>
 			<div class="sv-file__wrapper">
-				<label aria-label="Choose file" class="sv-btn sv-file__choose-btn" role="button" tabindex="0">
-					<span>Choose file</span>
+				<label aria-label="Select File" class="sv-btn sv-file__choose-btn" role="button" tabindex="0">
+					<span>Select File</span>
 				</label>
 				<span class="sv-description sv-file__no-file-chosen">No file chosen</span>
 			</div>
