Work for #6908: implement in Angular

--- a/tests/markup/snapshots/file-playing-video.snap.html
+++ b/tests/markup/snapshots/file-playing-video.snap.html
@@ -1,7 +1,7 @@
 <div class="sd-file sd-file--single">
 	<div class="sd-file__drag-area">
 		<div class="sd-file__video-container">
-			<div class="sv-action sv-action--hidden">
+			<div class="sv-action sv-action--hidden" id="sv-file-change-camera">
 				<div class="sv-action__content">
 					<button class="sd-context-btn sd-file__change-camera-button" role="button" tabindex="0" type="button">
 						<svg class="sv-svg-icon" role="img">
@@ -11,7 +11,7 @@
 					</button>
 				</div>
 			</div>
-			<div class="sv-action">
+			<div class="sv-action" id="sv-file-close-camera">
 				<div class="sv-action__content">
 					<button class="sd-context-btn sd-file__close-camera-button" role="button" tabindex="0" type="button">
 						<svg class="sv-svg-icon" role="img">
@@ -23,7 +23,7 @@
 			</div>
 			<video autoplay="" class="sd-file__video" id="testid0_video" playsinline="">
 			</video>
-			<div class="sv-action">
+			<div class="sv-action" id="sv-file-take-picture">
 				<div class="sv-action__content">
 					<button class="sd-context-btn sd-file__take-picture-button" role="button" tabindex="0" title="Take Photo" type="button">
 						<svg aria-label="Take Photo" class="sv-svg-icon" role="img">
