--- a/tests/markup/snapshots/file-mode-camera.snap.html
+++ b/tests/markup/snapshots/file-mode-camera.snap.html
@@ -4,7 +4,7 @@
 			<span class="sd-file__drag-area-placeholder">Click the button below to take a photo using the camera.</span>
 			<div class="sd-file__wrapper">
 				<div class="sd-action-bar sd-file__actions-container">
-					<div class="sv-action" id="sv-file-choose-file">
+					<div class="sv-action sv-action--hidden" id="sv-file-choose-file">
 						<div class="sv-action__content">
 							<label aria-label="Select File" class="sd-action sd-file__choose-btn sd-file__choose-btn--text" role="button" tabindex="0">
 								<svg aria-label="Select File" class="sv-svg-icon" role="img">
@@ -16,7 +16,7 @@
 							</label>
 						</div>
 					</div>
-					<div class="sv-action sv-action--hidden" id="sv-file-start-camera">
+					<div class="sv-action" id="sv-file-start-camera">
 						<div class="sv-action__content">
 							<button class="sd-action" role="button" tabindex="0" title="Take Photo" type="button">
 								<svg aria-label="Take Photo" class="sd-action__icon sv-svg-icon" role="img">
