Fix markup tests

--- a/tests/markup/snapshots/paneldynamic-remove-btn-right.snap.html
+++ b/tests/markup/snapshots/paneldynamic-remove-btn-right.snap.html
@@ -18,7 +18,7 @@
 					</div>
 					<button class="sd-action sd-action--negative sd-paneldynamic__btn sd-paneldynamic__remove-btn" type="button">
 						<span>Remove</span>
-						<span>
+						<span class="sd-hidden">
 						</span>
 					</button>
 				</div>
