Fix markup test

--- a/tests/markup/snapshots/matrixdynamic-defaultV2.snap.html
+++ b/tests/markup/snapshots/matrixdynamic-defaultV2.snap.html
@@ -327,7 +327,7 @@
 	<div class="sd-matrixdynamic__footer">
 		<button class="sd-action sd-matrixdynamic__add-btn sd-matrixdynamic__btn" type="button">
 			<span class="sv-string-viewer">Add Row</span>
-			<span>
+			<span class="sd-hidden">
 			</span>
 		</button>
 	</div>
