Panel Dynamic - Inner Fields overlap available screen area Fixes #5935

--- a/tests/markup/snapshots/panel.snap.html
+++ b/tests/markup/snapshots/panel.snap.html
@@ -1,5 +1,5 @@
 <div class="sv_row">
-	<div style="flex:1 1 100%; max-width:100%; min-width:300px;">
+	<div style="flex:1 1 100%; max-width:100%; min-width:min(100%, 300px);">
 		<div class="sv_q sv_qstn" data-name="question1" id="testid0">
 			<div role="presentation">
 				<div>HTML content here</div>
