--- a/tests/markup/snapshots/page-swnl-v2.snap.html
+++ b/tests/markup/snapshots/page-swnl-v2.snap.html
@@ -1,11 +1,11 @@
-<div style="flex:1 1 50%; max-width:100%; min-width:300px;">
+<div style="flex:1 1 50%; max-width:100%; min-width:min(100%, 300px);">
 	<div class="sd-question sd-question--html sd-row__question" data-name="question0" id="testid0">
 		<div class="sd-question__content" role="presentation">
 			<div class="sd-html">HTML1</div>
 		</div>
 	</div>
 </div>
-<div style="flex:1 1 50%; max-width:100%; min-width:300px;">
+<div style="flex:1 1 50%; max-width:100%; min-width:min(100%, 300px);">
 	<div class="sd-question sd-question--html sd-row__question" data-name="question1" id="testid1">
 		<div class="sd-question__content" role="presentation">
 			<div class="sd-html">HTML2</div>
