--- a/tests/markup/snapshots/panel-text.snap.html
+++ b/tests/markup/snapshots/panel-text.snap.html
@@ -1,5 +1,5 @@
 <div class="sv_row">
-	<div style="flex:1 1 100%; max-width:100%; min-width:300px;">
+	<div style="flex:1 1 100%; max-width:100%; min-width:min(100%, 300px);">
 		<div class="sv_q sv_qstn" data-name="question1" id="testid0">
 			<div role="presentation">
 				<input aria-invalid="false" aria-label="question1" aria-required="false" class="sv_q_text_root" id="testid0i" placeholder="" type="text">
