--- a/tests/markup/snapshots/paneldynamic-remove-btn-action-bar.snap.html
+++ b/tests/markup/snapshots/paneldynamic-remove-btn-action-bar.snap.html
@@ -6,7 +6,7 @@
 					<div class="sd-element sd-element--complex sd-panel sd-row__panel" id="testid0panel0">
 						<div class="sd-panel__content" id="testid0panel0_content">
 							<div class="sd-clearfix sd-row">
-								<div style="flex:1 1 100%; max-width:100%; min-width:300px;">
+								<div style="flex:1 1 100%; max-width:100%; min-width:min(100%, 300px);">
 									<div class="sd-element sd-element--nested sd-question sd-row__question sd-row__question--small" data-name="q1" id="testid0panel0question0">
 										<div class="sd-question__content sd-text__content" role="presentation">
 											<input aria-invalid="false" aria-label="q1" aria-required="false" class="sd-input sd-text" id="testid0panel0question0i" placeholder="" type="text">
