--- a/tests/markup/snapshots/question-errors-v2-bottom.snap.html
+++ b/tests/markup/snapshots/question-errors-v2-bottom.snap.html
@@ -1,4 +1,4 @@
-<div style="flex:1 1 100%; max-width:100%; min-width:300px;">
+<div style="flex:1 1 100%; max-width:100%; min-width:min(100%, 300px);">
 	<div class="sd-element sd-element--with-frame sd-question sd-question--error sd-row__question sd-row__question--small" data-name="name" id="testid0">
 		<div class="sd-element__header sd-element__header--location-top sd-question__header sd-question__header--location-top">
 			<h5 class="sd-element__title sd-question__title sd-question__title--error sd-question__title--required sd-title" id="testid0_ariaTitle">
