--- a/tests/markup/snapshots/survey-navigation.snap.html
+++ b/tests/markup/snapshots/survey-navigation.snap.html
@@ -5,7 +5,7 @@
 		<div class="sv_body sv_body--static sv-components-column sv-components-column--expandable" id="testidpage0">
 			<div class="sv_p_root">
 				<div class="sv_row">
-					<div style="flex:1 1 100%; max-width:100%; min-width:300px;">
+					<div style="flex:1 1 100%; max-width:100%; min-width:min(100%, 300px);">
 						<div class="sv_q sv_qstn" data-name="q1" id="testid0">
 							<div role="presentation">
 								<div>
