work for the https://github.com/surveyjs/survey-library/issues/7071

--- a/tests/markup/snapshots/rating-as-dropdown-with-value-focused.snap.html
+++ b/tests/markup/snapshots/rating-as-dropdown-with-value-focused.snap.html
@@ -3,7 +3,7 @@
 		<div aria-controls="testid0i_list" aria-expanded="false" aria-invalid="false" aria-label="Question title" aria-required="false" role="textbox" tabindex="0">
 			<div>
 				<span class="sv-string-viewer">3</span>
-				<input aria-controls="testid0i_list" aria-expanded="false" aria-label="Select..." autocomplete="off" inputmode="text" placeholder="" readonly="" tabindex="-1" type="text">
+				<input aria-controls="testid0i_list" aria-expanded="false" autocomplete="off" inputmode="text" placeholder="" readonly="" tabindex="-1" type="text">
 			</div>
 		</div>
 		<div>
