--- a/tests/markup/snapshots/tagbox-without-search.snap.html
+++ b/tests/markup/snapshots/tagbox-without-search.snap.html
@@ -4,7 +4,7 @@
 			<div class="sv_q_dropdown__value sv_q_tagbox__value">
 				<div class="sv_q_tagbox__hint">
 					<div class="sv_q_tagbox__hint-suffix-wrapper">
-						<input aria-controls="testid0i_list" aria-expanded="false" aria-label="Select..." autocomplete="off" class="sv_q_dropdown__filter-string-input sv_q_tagbox__filter-string-input" inputmode="text" placeholder="Select..." readonly="" size="1" type="text">
+						<input aria-controls="testid0i_list" aria-expanded="false" autocomplete="off" class="sv_q_dropdown__filter-string-input sv_q_tagbox__filter-string-input" inputmode="text" placeholder="Select..." readonly="" size="1" type="text">
 					</div>
 				</div>
 			</div>
