Update markup snapshots

--- a/tests/markup/snapshots/tagbox-mobile.snap.html
+++ b/tests/markup/snapshots/tagbox-mobile.snap.html
@@ -17,7 +17,7 @@
 			</div>
 		</div>
 		<div>
-			<div class="sv-dropdown-popup sv-multi-select-list sv-popup sv-popup--overlay" style="display:none;" tabindex="-1">
+			<div class="sv-dropdown-popup sv-multi-select-list sv-popup sv-popup--dropdown-overlay sv-popup--overlay" style="display:none;" tabindex="-1">
 				<div class="sv-popup__container">
 					<div class="sv-popup__shadow">
 						<div class="sv-popup__body-content">
