--- a/tests/markup/snapshots/dropdown-select-mobile.snap.html
+++ b/tests/markup/snapshots/dropdown-select-mobile.snap.html
@@ -6,7 +6,7 @@
 			</div>
 		</div>
 		<div>
-			<div class="sv-dropdown-popup sv-popup sv-popup--overlay sv-single-select-list" style="display:none;" tabindex="-1">
+			<div class="sv-dropdown-popup sv-popup sv-popup--dropdown-overlay sv-popup--overlay sv-single-select-list" style="display:none;" tabindex="-1">
 				<div class="sv-popup__container">
 					<div class="sv-popup__shadow">
 						<div class="sv-popup__body-content">
