--- a/tests/markup/snapshots/file-mode-camera.snap.html
+++ b/tests/markup/snapshots/file-mode-camera.snap.html
@@ -1,7 +1,9 @@
 <div class="sd-file sd-file--single">
 	<div class="sd-file__drag-area">
 		<div class="sd-file__decorator">
-			<span class="sd-file__drag-area-placeholder">Click the button below to take a photo using the camera.</span>
+			<span class="sd-file__drag-area-placeholder">
+				<span class="sv-string-viewer">Click the button below to take a photo using the camera.</span>
+			</span>
 			<div class="sd-file__wrapper">
 				<div class="sd-action-bar sd-file__actions-container">
 					<div class="sv-action sv-action--hidden" id="sv-file-choose-file">
