--- a/tests/markup/snapshots/file-single-zip-ro.snap.html
+++ b/tests/markup/snapshots/file-single-zip-ro.snap.html
@@ -2,7 +2,9 @@
 	<input class="form-control sv-visuallyhidden" disabled="" id="testid0i" placeholder="Question title" style="color:transparent;" type="file">
 	<div>
 		<div class="sv-file__decorator">
-			<span class="sv-hidden">No file chosen</span>
+			<span class="sv-hidden">
+				<span class="sv-string-viewer">No file chosen</span>
+			</span>
 			<div>
 			</div>
 		</div>
@@ -14,6 +16,6 @@
 				<div>
 				</div>
 			</span>
-			</div>
 		</div>
 	</div>
+</div>
