--- a/tests/markup/snapshots/file-camera.snap.html
+++ b/tests/markup/snapshots/file-camera.snap.html
@@ -2,7 +2,9 @@
 	<input aria-invalid="false" aria-label="Question title" aria-required="false" capture="user" class="sv-visuallyhidden" id="testid0i" tabindex="-1" title="Choose file(s)..." type="file">
 	<div>
 		<div class="sv-file__decorator">
-			<span class="sv-hidden">Drag and drop a file here or click the button below to select a file to upload.</span>
+			<span class="sv-hidden">
+				<span class="sv-string-viewer">Drag and drop a file here or click the button below to select a file to upload.</span>
+			</span>
 			<div>
 				<label aria-label="Select File" class="sv_q_file_choose_button" role="button" tabindex="0">
 					<span>Select File</span>
