--- a/tests/markup/snapshots/file-mob2-zip-png-ro.snap.html
+++ b/tests/markup/snapshots/file-mob2-zip-png-ro.snap.html
@@ -2,7 +2,9 @@
 	<input class="form-control sd-visuallyhidden" disabled="" id="testid0i" multiple="" placeholder="Question title" style="color:transparent;" type="file">
 	<div class="sd-file__drag-area">
 		<div class="sd-file__decorator">
-			<span class="sd-file__drag-area-placeholder">No file chosen</span>
+			<span class="sd-file__drag-area-placeholder">
+				<span class="sv-string-viewer">No file chosen</span>
+			</span>
 			<div class="sd-file__wrapper">
 			</div>
 		</div>
