--- a/tests/markup/snapshots/file-mob2-zip-png.snap.html
+++ b/tests/markup/snapshots/file-mob2-zip-png.snap.html
@@ -2,7 +2,9 @@
 	<input aria-invalid="false" aria-label="Question title" aria-required="false" class="sd-visuallyhidden" id="testid0i" multiple="" tabindex="-1" title=" " type="file">
 	<div class="sd-file__drag-area">
 		<div class="sd-file__decorator">
-			<span class="sd-file__drag-area-placeholder">Drag and drop a file here or click the button below to select a file to upload.</span>
+			<span class="sd-file__drag-area-placeholder">
+				<span class="sv-string-viewer">Drag and drop a file here or click the button below to select a file to upload.</span>
+			</span>
 			<div class="sd-file__wrapper">
 				<div class="sd-action-bar sd-file__actions-container">
 					<div class="sv-action" id="sv-file-choose-file">
