--- a/tests/markup/snapshots/file-mode-both.snap.html
+++ b/tests/markup/snapshots/file-mode-both.snap.html
@@ -2,7 +2,9 @@
 	<input aria-invalid="false" aria-label="Question title" aria-required="false" class="sd-visuallyhidden" id="testid0i" tabindex="-1" title="Choose file(s)..." type="file">
 	<div class="sd-file__drag-area">
 		<div class="sd-file__decorator">
-			<span class="sd-file__drag-area-placeholder">Drag and drop or select a file to upload or take a photo using the camera.</span>
+			<span class="sd-file__drag-area-placeholder">
+				<span class="sv-string-viewer">Drag and drop or select a file to upload or take a photo using the camera.</span>
+			</span>
 			<div class="sd-file__wrapper">
 				<div class="sd-action-bar sd-file__actions-container">
 					<div class="sv-action" id="sv-file-choose-file">
