--- a/tests/markup/snapshots/file-modern-zip-png.snap.html
+++ b/tests/markup/snapshots/file-modern-zip-png.snap.html
@@ -2,7 +2,9 @@
 	<input aria-invalid="false" aria-label="Question title" aria-required="false" class="sv-visuallyhidden" id="testid0i" multiple="" tabindex="-1" title=" " type="file">
 	<div>
 		<div class="sv-file__decorator">
-			<span class="sv-hidden">Drag and drop a file here or click the button below to select a file to upload.</span>
+			<span class="sv-hidden">
+				<span class="sv-string-viewer">Drag and drop a file here or click the button below to select a file to upload.</span>
+			</span>
 			<div class="sv-file__wrapper">
 				<label aria-label="Select File" class="sv-btn sv-file__choose-btn" role="button" tabindex="0">
 					<span>Select File</span>
