--- a/tests/markup/snapshots/ranking-values.snap.html
+++ b/tests/markup/snapshots/ranking-values.snap.html
@@ -1,5 +1,5 @@
 <div class="sv-ranking">
-	<div class="sv-q-col-1 sv-ranking-item" data-sv-drop-target-ranking-item="0">
+	<div class="sv-q-col-1 sv-ranking-item" data-sv-drop-target-ranking-item="0" tabindex="0">
 		<div style="outline:none;" tabindex="-1">
 			<div class="sv-ranking-item__ghost">
 			</div>
@@ -16,19 +16,14 @@
 						</path>
 					</svg>
 				</div>
-				<div class="sv-ranking-item__index sv-ranking-item__index--empty">
-					<svg height="16" viewBox="0 0 16 16" width="16" xmlns="http://www.w3.org/2000/svg" class="">
-						<path d="M13 7H3V9H13V7Z" class="">
-						</path>
-					</svg>
-				</div>
+				<div class="sv-ranking-item__index">1</div>
 				<div class="sv-ranking-item__text">
-					<span class="sv-string-editor" contenteditable="true">item1</span>
+					<span class="sv-string-viewer">item1</span>
 				</div>
 			</div>
 		</div>
 	</div>
-	<div class="sv-q-col-1 sv-ranking-item" data-sv-drop-target-ranking-item="1">
+	<div class="sv-q-col-1 sv-ranking-item" data-sv-drop-target-ranking-item="1" tabindex="0">
 		<div style="outline:none;" tabindex="-1">
 			<div class="sv-ranking-item__ghost">
 			</div>
@@ -45,19 +40,14 @@
 						</path>
 					</svg>
 				</div>
-				<div class="sv-ranking-item__index sv-ranking-item__index--empty">
-					<svg height="16" viewBox="0 0 16 16" width="16" xmlns="http://www.w3.org/2000/svg" class="">
-						<path d="M13 7H3V9H13V7Z" class="">
-						</path>
-					</svg>
-				</div>
+				<div class="sv-ranking-item__index">2</div>
 				<div class="sv-ranking-item__text">
-					<span class="sv-string-editor" contenteditable="true">item2</span>
+					<span class="sv-string-viewer">item2</span>
 				</div>
 			</div>
 		</div>
 	</div>
-	<div class="sv-q-col-1 sv-ranking-item" data-sv-drop-target-ranking-item="2">
+	<div class="sv-q-col-1 sv-ranking-item" data-sv-drop-target-ranking-item="2" tabindex="0">
 		<div style="outline:none;" tabindex="-1">
 			<div class="sv-ranking-item__ghost">
 			</div>
@@ -74,14 +64,9 @@
 						</path>
 					</svg>
 				</div>
-				<div class="sv-ranking-item__index sv-ranking-item__index--empty">
-					<svg height="16" viewBox="0 0 16 16" width="16" xmlns="http://www.w3.org/2000/svg" class="">
-						<path d="M13 7H3V9H13V7Z" class="">
-						</path>
-					</svg>
-				</div>
+				<div class="sv-ranking-item__index">3</div>
 				<div class="sv-ranking-item__text">
-					<span class="sv-string-editor" contenteditable="true">item3</span>
+					<span class="sv-string-viewer">item3</span>
 				</div>
 			</div>
 		</div>
