--- a/tests/markup/snapshots/ranking.snap.html
+++ b/tests/markup/snapshots/ranking.snap.html
@@ -1,6 +1,6 @@
 <div class="sv-ranking">
 	<div class="sv-q-col-1 sv-ranking-item" data-sv-drop-target-ranking-item="0" tabindex="0">
-		<div style="outline: none;" tabindex="-1">
+		<div style="outline:none;" tabindex="-1">
 			<div class="sv-ranking-item__ghost">
 			</div>
 			<div class="sv-ranking-item__content">
@@ -17,6 +17,10 @@
 					</svg>
 				</div>
 				<div class="sv-ranking-item__index sv-ranking-item__index--empty">
+					<svg height="16" viewBox="0 0 16 16" width="16" xmlns="http://www.w3.org/2000/svg" class="">
+						<path d="M13 7H3V9H13V7Z" class="">
+						</path>
+					</svg>
 				</div>
 				<div class="sv-ranking-item__text">
 					<span class="sv-string-viewer">item1</span>
@@ -25,7 +29,7 @@
 		</div>
 	</div>
 	<div class="sv-q-col-1 sv-ranking-item" data-sv-drop-target-ranking-item="1" tabindex="0">
-		<div style="outline: none;" tabindex="-1">
+		<div style="outline:none;" tabindex="-1">
 			<div class="sv-ranking-item__ghost">
 			</div>
 			<div class="sv-ranking-item__content">
@@ -42,6 +46,10 @@
 					</svg>
 				</div>
 				<div class="sv-ranking-item__index sv-ranking-item__index--empty">
+					<svg height="16" viewBox="0 0 16 16" width="16" xmlns="http://www.w3.org/2000/svg" class="">
+						<path d="M13 7H3V9H13V7Z" class="">
+						</path>
+					</svg>
 				</div>
 				<div class="sv-ranking-item__text">
 					<span class="sv-string-viewer">item2</span>
@@ -50,7 +58,7 @@
 		</div>
 	</div>
 	<div class="sv-q-col-1 sv-ranking-item" data-sv-drop-target-ranking-item="2" tabindex="0">
-		<div style="outline: none;" tabindex="-1">
+		<div style="outline:none;" tabindex="-1">
 			<div class="sv-ranking-item__ghost">
 			</div>
 			<div class="sv-ranking-item__content">
@@ -67,6 +75,10 @@
 					</svg>
 				</div>
 				<div class="sv-ranking-item__index sv-ranking-item__index--empty">
+					<svg height="16" viewBox="0 0 16 16" width="16" xmlns="http://www.w3.org/2000/svg" class="">
+						<path d="M13 7H3V9H13V7Z" class="">
+						</path>
+					</svg>
 				</div>
 				<div class="sv-ranking-item__text">
 					<span class="sv-string-viewer">item3</span>
