--- a/tests/markup/snapshots/ranking-selectToRankEnabled-empty.snap.html
+++ b/tests/markup/snapshots/ranking-selectToRankEnabled-empty.snap.html
@@ -18,6 +18,10 @@
 						</svg>
 					</div>
 					<div class="sv-ranking-item__index sv-ranking-item__index--empty">
+						<svg height="16" viewBox="0 0 16 16" width="16" xmlns="http://www.w3.org/2000/svg" class="">
+							<path d="M13 7H3V9H13V7Z" class="">
+							</path>
+						</svg>
 					</div>
 					<div class="sv-ranking-item__text">
 						<span class="sv-string-viewer">item1</span>
@@ -43,6 +47,10 @@
 						</svg>
 					</div>
 					<div class="sv-ranking-item__index sv-ranking-item__index--empty">
+						<svg height="16" viewBox="0 0 16 16" width="16" xmlns="http://www.w3.org/2000/svg" class="">
+							<path d="M13 7H3V9H13V7Z" class="">
+							</path>
+						</svg>
 					</div>
 					<div class="sv-ranking-item__text">
 						<span class="sv-string-viewer">item2</span>
@@ -68,6 +76,10 @@
 						</svg>
 					</div>
 					<div class="sv-ranking-item__index sv-ranking-item__index--empty">
+						<svg height="16" viewBox="0 0 16 16" width="16" xmlns="http://www.w3.org/2000/svg" class="">
+							<path d="M13 7H3V9H13V7Z" class="">
+							</path>
+						</svg>
 					</div>
 					<div class="sv-ranking-item__text">
 						<span class="sv-string-viewer">item3</span>
