fix bug: fail to run react test examples and knockout test examples

--- a/examples/react/index.html
+++ b/examples/react/index.html
@@ -18,8 +18,8 @@
     <!-- <link rel="stylesheet" href="../../build/survey-core/modern.css" /> -->
     <link rel="stylesheet" href="../../build/survey-core/defaultV2.css" />
     <script src="../../build/survey-core/survey.core.js"></script>
-    <!-- <script src="../../build/survey-react/survey.react.js"></script> -->
-    <script src="../../build/survey-react-ui/survey-react-ui.js"></script>
+    <script src="../../build/survey-react/survey.react.js"></script>
+    <!-- <script src="../../build/survey-react-ui/survey-react-ui.js"></script> -->
   </head>
 
   <body>
