--- a/examples/knockout/index.html
+++ b/examples/knockout/index.html
@@ -12,8 +12,8 @@
     <!-- <link rel="stylesheet" href="../../build/survey-core/modern.css" /> -->
     <link rel="stylesheet" href="../../build/survey-core/defaultV2.css" />
     <script src="../../build/survey-core/survey.core.js"></script>
-    <!-- <script src="../../build/survey-knockout/survey.ko.js"></script> -->
-    <script src="../../build/survey-knockout-ui/survey-knockout-ui.js"></script>
+    <script src="../../build/survey-knockout/survey.ko.js"></script>
+    <!-- <script src="../../build/survey-knockout-ui/survey-knockout-ui.js"></script> -->
 </head>
 
   <body>
