7135 Extract the blank number icon from the CSS background-image in the Svg for theming. (#7198)
* #7135 Extract the blank number icon from the CSS background-image in the Svg for theming. Started for knockout
Fixes #7135

* Fixes #7135

* #7135 - css variable in test

* #7135 - fix scaling

* #7135 - fixed tests

* #7135 - fixed test

* #7135 - use svg
Fixes #7135

* #7135 - add wait to test

* #7135 - more timeouts

---------

Co-authored-by: Aleksey Novikov <novikov@abrisplatform.com>

--- a/tests/markup/snapshots/ranking-values.snap.html
+++ b/tests/markup/snapshots/ranking-values.snap.html
@@ -1,5 +1,5 @@
 <div class="sv-ranking">
-	<div class="sv-q-col-1 sv-ranking-item" data-sv-drop-target-ranking-item="0">
+	<div class="sv-q-col-1 sv-ranking-item" data-sv-drop-target-ranking-item="0" tabindex="0">
 		<div style="outline:none;" tabindex="-1">
 			<div class="sv-ranking-item__ghost">
 			</div>
@@ -14,19 +14,14 @@
 						</use>
 					</svg>
 				</div>
-				<div class="sv-ranking-item__index sv-ranking-item__index--empty">
-					<svg class="">
-						<use xlink:href="#icon-ranking-dash" class="">
-						</use>
-					</svg>
-				</div>
+				<div class="sv-ranking-item__index">1</div>
 				<div class="sv-ranking-item__text">
-					<span class="sv-string-editor" contenteditable="true">item1</span>
+					<span class="sv-string-viewer">item1</span>
 				</div>
 			</div>
 		</div>
 	</div>
-	<div class="sv-q-col-1 sv-ranking-item" data-sv-drop-target-ranking-item="1">
+	<div class="sv-q-col-1 sv-ranking-item" data-sv-drop-target-ranking-item="1" tabindex="0">
 		<div style="outline:none;" tabindex="-1">
 			<div class="sv-ranking-item__ghost">
 			</div>
@@ -41,19 +36,14 @@
 						</use>
 					</svg>
 				</div>
-				<div class="sv-ranking-item__index sv-ranking-item__index--empty">
-					<svg class="">
-						<use xlink:href="#icon-ranking-dash" class="">
-						</use>
-					</svg>
-				</div>
+				<div class="sv-ranking-item__index">2</div>
 				<div class="sv-ranking-item__text">
-					<span class="sv-string-editor" contenteditable="true">item2</span>
+					<span class="sv-string-viewer">item2</span>
 				</div>
 			</div>
 		</div>
 	</div>
-	<div class="sv-q-col-1 sv-ranking-item" data-sv-drop-target-ranking-item="2">
+	<div class="sv-q-col-1 sv-ranking-item" data-sv-drop-target-ranking-item="2" tabindex="0">
 		<div style="outline:none;" tabindex="-1">
 			<div class="sv-ranking-item__ghost">
 			</div>
@@ -68,14 +58,9 @@
 						</use>
 					</svg>
 				</div>
-				<div class="sv-ranking-item__index sv-ranking-item__index--empty">
-					<svg class="">
-						<use xlink:href="#icon-ranking-dash" class="">
-						</use>
-					</svg>
-				</div>
+				<div class="sv-ranking-item__index">3</div>
 				<div class="sv-ranking-item__text">
-					<span class="sv-string-editor" contenteditable="true">item3</span>
+					<span class="sv-string-viewer">item3</span>
 				</div>
 			</div>
 		</div>
